refactor: ArrayList로 정렬, 검증과정 거친 후에 불변객체로 변경